Added the ability to create an article
Built out the form to create an article. Added the routes, and built the controller actions. Also, added tag rendering to the index view and finished building the lazy loader.

--- a/mini-project-js-app/css/main.css
+++ b/mini-project-js-app/css/main.css
@@ -11411,3 +11411,23 @@ h1.epic {
 /* @end */
 
 /*# sourceMappingURL=style.css.map */
+
+.loading img {
+  display: inline-block;
+}
+.loading {
+  text-align: center;
+}
+.loading.inactive {
+  display: none;
+}
+.loading.active {
+  display: block;
+}
+
+#froala-preview-container.no-margin-top {
+  margin-top: 70px;
+}
+button#save {
+  margin-top: 20px;
+}
